--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -5,10 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".Fragment1">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
+        android:id="@+id/fragment1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:textSize="50sp"
+        android:gravity="center"
+        android:background="#F5A9A9"
+        android:text="프래그먼트 1" />
 
 </FrameLayout>
