--- a/app/src/main/res/layout/fragment_4.xml
+++ b/app/src/main/res/layout/fragment_4.xml
@@ -5,10 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".Fragment4">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/fragment4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:textSize="50sp"
+        android:gravity="center"
+        android:background="#F7D358"
+        android:text="프래그먼트 4" />
 
 </FrameLayout>
