--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -5,15 +5,19 @@
 
     <item android:id="@+id/fragment1"
         android:title="@string/fragment1"
+        android:enabled="true"
         android:icon="@drawable/baseline_filter_1_24"/>
     <item android:id="@+id/fragment2"
         android:title="@string/fragment2"
+        android:enabled="true"
         android:icon="@drawable/baseline_filter_2_24"/>
     <item android:id="@+id/fragment3"
         android:title="@string/fragment3"
+        android:enabled="true"
         android:icon="@drawable/baseline_filter_3_24"/>
     <item android:id="@+id/fragment4"
         android:title="@string/fragment4"
+        android:enabled="true"
         android:icon="@drawable/baseline_filter_4_24"/>
 
 
